--- a/index.html
+++ b/index.html
@@ -7,25 +7,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Flew &mdash; Free HTML5 Bootstrap Website Template by FreeHTML5.co</title>
+	<title>Darshan Valji - Suiting, Shirtings and Uniforms</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
-
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
+	<meta name="description" content="Website for Darshan Valji - Suiting and Shirtings" />
+	<meta name="keywords" content="Valji, valji, darshan, darshan valji, suiting, shirtings, clothes, fabric" />
+	<meta name="author" content="Kapil Jain, Shrushti Shah" />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -33,10 +19,6 @@
 	<meta property="og:url" content=""/>
 	<meta property="og:site_name" content=""/>
 	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="images\valji.png">
@@ -70,7 +52,10 @@
 	}
 	
 	</script>
-	
+	<!-- Start WOWSlider.com HEAD section -->
+<link rel="stylesheet" type="text/css" href="engine1/style.css" />
+<script type="text/javascript" src="engine1/jquery.js"></script>
+<!-- End WOWSlider.com HEAD section -->
 	</head>
     <body>
 	<div id="fh5co-page">
@@ -81,11 +66,11 @@
 			<h1><a href="index.html" style="text-shadow: 3px 2px #C0C0C0;letter-spacing:8px;font-weight: bold;font-size: 1.7em">Valji</a></h1>
 				<nav role="navigation">
 					<ul>
-						<li><a href="work.html">Work</a></li>
-						<li><a href="C:/Users/user1/Desktop/flew/index#service">Services</a></li>
-						<li><a href="pricing.html">Pricing</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="#AboutUs">About</a></li>
+						<li><a href="#products">Products</a></li>
+						<li><a href="#stand">Our Stand</a></li>
+						<li><a href="#collections">Collections</a></li>
+						<li><a href="#testimony">Feedback</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -95,7 +80,7 @@
 </div>
 	
 
-	<section id="service">
+<section id="images">
 	<aside id="fh5co-hero" class="js-fullheight">
 		<div class="flexslider js-fullheight">
 			<ul class="slides">
@@ -104,8 +89,7 @@
 		   		<div class="container">
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 		   				<div class="slider-text-inner">
-		   					<h2>Start Your Startup With This Template</h2>
-		   					<p><a href="#" class="btn btn-primary btn-lg">Get started</a></p>
+		   					<h2>We Think Different That Others Can't</h2>
 		   				</div>
 		   			</div>
 		   		</div>
@@ -114,8 +98,7 @@
 		   		<div class="container">
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 		   				<div class="slider-text-inner">
-		   					<h2>Take Your Business To The Next Level</h2>
-		   					<p><a href="#" class="btn btn-primary btn-lg">Get started</a></p>
+		   					<h2>We Think Different That Others Can't</h2>
 		   				</div>
 		   			</div>
 		   		</div>
@@ -125,7 +108,6 @@
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 		   				<div class="slider-text-inner">
 		   					<h2>We Think Different That Others Can't</h2>
-		   					<p><a href="#" class="btn btn-primary btn-lg">Get started</a></p>
 		   				</div>
 		   			</div>
 		   		</div>
@@ -155,7 +137,7 @@
 					</figure>
 			</div>
 			<div class="col-md-10 col-sm-6 animate-box">
-				<h2 style="font-family:Arial">A TEXTILE FIRM IN THE MAKING ...</h2>
+				<h2 style="font-family:Arial">TEXTILE FIRM IN THE MAKING ...</h2>
 				<p style="font-family:none">100 years back Shri Tekchand Himatmalji Kothari came to Mumbai from a remote village called Bagol in Rajasthan with a dream of realizing his potential in this city. Initially to sustain he worked in various firms in the city which also gave him a wider perspective and a deep understanding about various businesses. In a few years he was joined by his brother Shri Tilokchandji Himatmalji Kothari and both started a Adhat Pedhi in the name of Tilokchand Rajkamal Adat. The business started flourishing and Shri Vastimal Tilokchandji Kothari also joined this family pedi business. 
 				Thus the foundation was firmly laid for other ventures to come.
 				Shri Balchandji Kothari, son of Shri Vastimalji Kothari joined the family adat business. In 1981 he started the textile trading company specializing in uniform fabrics. In early 90’s Shri Balchandji Kothari launched the school uniform fabrics manufacturing unit.
@@ -208,19 +190,17 @@
 	</div>
 </section>
 	
-	<section id="service">
+	<section id="products">
 	<div id="fh5co-services-section">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Our Products</h2>
 					<p><i>"Our fibres can be used in their 100% form, or be blended with all natural and synthetic fibres for enhanced comfort, feel and lustre. Over the years, our fibres have found new and path-breaking innovations to add comfort to your life."</i></p>
 				</div>
-			</div>
 			<div class="row">
 				<div class="col-md-4 animate-box">
 					<div class="services">
-						<i class="icon-bomb"></i>
 						<div class="desc">
 							<h3>Play School</h3>
 							<p>Our skin-friendly fabrics are extremely popular in the trade because of their softness and feel which is a must for the little toddlers in uniforms whose parents do not want any irritation on the sensitive skins of their child.</p>
@@ -229,7 +209,6 @@
 				</div>
 				<div class="col-md-4 animate-box">
 					<div class="services">
-						<i class="icon-server"></i>
 						<div class="desc">
 							<h3>School</h3>
 							<p>Our school uniform fabrics are highly demanded for their distinct shades, colors as per the quality norms. The uniform fabrics are checked on various defined parameters in order to face the stringent industry standards.</p>
@@ -238,7 +217,6 @@
 				</div>
 				<div class="col-md-4 animate-box">
 					<div class="services">
-						<i class="icon-money"></i>
 						<div class="desc">
 							<h3>Corporate</h3>
 							<p>We are regarded as one of the most renowned manufacturer for all types of corporate wear. With the aid of our large production and excellent storage facility, we have been able to manage bulk demands in the most efficient manner.</p>
@@ -247,20 +225,18 @@
 				</div>
 				<div class="col-md-4 animate-box">
 					<div class="services">
-						<i class="icon-tablet"></i>
 						<div class="desc">
 							<h3>Industrial</h3>
 							<p>Our Industrial uniform fabrics are well known for their durability because once stitched the uniform gets exposed to harsh and tough work environment. To ensure this the fabrics goes stringent quality checks at all stages of production.</p>
 						</div>
 					</div>
+				</div> 
 				</div>
-		
 			</div>
 		</div>
-	</div>
 	</section>
 
-
+<section id="stand">
 	<div id="fh5co-work-section" class="fh5co-light-grey-section">
 		<div class="container">
 			<div class="row">
@@ -307,9 +283,46 @@
 			</div>
 		</div>
 	</div>
+</section>
 	
+
+<section id="collections">
+	<div id="fh5co-blog-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading animate-box">
+					<h2>Collections</h2>
+					<p><i>"Variety's the very spice of life, that gives it all it's flavour."</i></p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-sm-6 animate-box">
+					<a href="#" class="item-grid">
+						<div class="image" style="background-image: url(images/image_2.jpg)"></div>
+						<div class="v-align">
+							<div class="v-align-middle">
+								<h3 class="title">collections 1</h3>
+							</div>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-6 col-sm-6 animate-box">
+					<a href="#" class="item-grid">
+						<div class="image" style="background-image: url(images/image_2.jpg)"></div>
+						<div class="v-align">
+							<div class="v-align-middle">
+								<h3 class="title">collections 2</h3>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
 <section id="testimony">
-	<div id="fh5co-testimony-section">
+	<div id="fh5co-testimony-section" class="fh5co-light-grey-section">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading animate-box">
@@ -361,85 +374,37 @@
 		</div>
 	</div>
 </section>
-	<div id="fh5co-blog-section" class="fh5co-light-grey-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading animate-box">
-					<h2>Recent from Blog</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6 col-sm-6 animate-box">
-					<a href="#" class="item-grid">
-						<div class="image" style="background-image: url(images/image_1.jpg)"></div>
-						<div class="v-align">
-							<div class="v-align-middle">
-								<h3 class="title">We Create Mobile App</h3>
-								<h5 class="date"><span>June 23, 2016</span> | <span>4 Comments</span></h5>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-6 col-sm-6 animate-box">
-					<a href="#" class="item-grid">
-						<div class="image" style="background-image: url(images/image_2.jpg)"></div>
-						<div class="v-align">
-							<div class="v-align-middle">
-								<h3 class="title">Geographical App</h3>
-								<h5 class="date"><span>June 22, 2016</span> | <span>10 Comments</span></h5>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-12 text-center animate-box">
-					<p><a href="#" class="btn btn-primary with-arrow">View More Post <i class="icon-arrow-right"></i></a></p>
-				</div>
-			</div>
-		</div>
-	</div>
+
+<section id="showcase">
 	<div id="fh5co-pricing-section">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading animate-box">
-					<h2>Pricing</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+					<h2>Showcase</h2>
+					<p><i>"The most complicated skill is to be simple."</i></p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="pricing">
-					<div class="col-md-3 animate-box">
+					<div class="col-md-4 animate-box">
 						<div class="price-box">
-							<h2 class="pricing-plan">Starter</h2>
+							<h3 class="pricing-plan">Media</h3>
 							<div class="price"><sup class="currency">$</sup>9<small>/month</small></div>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
 						</div>
 					</div>
 
-					<div class="col-md-3 animate-box">
+					<div class="col-md-4 animate-box">
 						<div class="price-box">
-							<h2 class="pricing-plan">Basic</h2>
-							<div class="price"><sup class="currency">$</sup>27<small>/month</small></div>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							<h3 class="pricing-plan">Displays</h3>
+							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a><br>
 							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
 						</div>
 					</div>
-
-					<div class="col-md-3 animate-box">
-						<div class="price-box popular">
-							<h2 class="pricing-plan pricing-plan-offer">Pro <span>Best Offer</span></h2>
-							<div class="price"><sup class="currency">$</sup>74<small>/month</small></div>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
-						</div>
-					</div>
-
-					<div class="col-md-3 animate-box">
+					<div class="col-md-4 animate-box">
 						<div class="price-box">
-							<h2 class="pricing-plan">Unlimited</h2>
+							<h3 class="pricing-plan">Certification</h3>
 							<div class="price"><sup class="currency">$</sup>140<small>/month</small></div>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 							<a href="#" class="btn btn-select-plan btn-sm">Select Plan</a>
@@ -449,8 +414,9 @@
 			</div>
 		</div>
 	</div>
+</section>
 
-	<div class="fh5co-cta" style="background-image: url(images/slide_2.jpg);">
+	<!--<div class="fh5co-cta" style="background-image: url(images/slide_2.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="col-md-12 text-center animate-box">
@@ -459,7 +425,7 @@
 			</div>
 		</div>
 	</div>
-
+    <!-->
 	
 	<footer id="fh5co-footer" role="contentinfo">
 	
@@ -498,7 +464,7 @@
 			
 			
 			<div class="col-md-12 fh5co-copyright text-center">
-				<p>&copy; 2016 Free HTML5 template. All Rights Reserved. <span>Designed with <i class="icon-heart"></i> by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images by <a href="http://unsplash.com/" target="_blank">Unsplash</a></span></p>	
+				<p>&copy; 2017 Darshan Valji. All Rights Reserved. </p>	
 			</div>
 			
 		</div>
