--- a/contact.html
+++ b/contact.html
@@ -154,9 +154,13 @@
 	
 		<div class="container">
 			<div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
-				<h3>About Us</h3>
-				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-				<p><a href="#" class="btn btn-primary btn-outline with-arrow btn-sm">Join Us <i class="icon-arrow-right"></i></a></p>
+					<h3>Contact Info.</h3>
+					<ul class="contact-info">
+						<li><i class="icon-map"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
+						<li><i class="icon-phone"></i>+ 1235 2355 98</li>
+						<li><i class="icon-envelope"></i><a href="#">info@yoursite.com</a></li>
+						<li><i class="icon-globe"></i><a href="#">www.yoursite.com</a></li>
+					</ul>
 			</div>
 			<div class="col-md-6 col-md-push-1 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
 				<h3>Our Services</h3>
