--- a/index.html
+++ b/index.html
@@ -126,33 +126,33 @@ function showSlides(n) {
 	
 
 <section id="images">
-	<aside id="fh5co-hero" class="js-fullheight">
+	<aside id="fh5co-hero" class="js-fullheight slider-text">
 		<div class="flexslider js-fullheight">
 			<ul class="slides">
-		   	<li style="background-image: url(images/slide_1.jpg);">
+		   	<li style="background-image: url(images/valji_image5.jpg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 		   				<div class="slider-text-inner">
-		   					<h2>We Think Different That Others Can't</h2>
+		   					<h2><span style="color:#27E1CE;">We</span> Think Different That Others Can't</h2>
 		   				</div>
 		   			</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/slide_2.jpg);">
+		   	<li style="background-image: url(images/valji_image2.jpg);">
 		   		<div class="container">
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 		   				<div class="slider-text-inner">
-		   					<h2>We Think Different That Others Can't</h2>
+		   					<h2><span style="color:#27E1CE;">We</span> Create Things That Others Can Only Imagine</h2>
 		   				</div>
 		   			</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/slide_3.jpg);">
+		   	<li style="background-image: url(images/valji_image3.jpg);">
 		   		<div class="container">
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 		   				<div class="slider-text-inner">
-		   					<h2>We Think Different That Others Can't</h2>
+		   					<h2><span style="color:#27E1CE;">We</span> Make Every Wish Come True</h2>
 		   				</div>
 		   			</div>
 		   		</div>
@@ -176,13 +176,13 @@ function showSlides(n) {
 	<div class="jumbotron bordershadow">
 		<div class="row">
 			<div class="container">
-				<div class="col-md-2 col-sm-6 animate-box" style="float:left;padding-right:20px">
+				<div class="col-md-2 col-sm-4 animate-box" style="float:left;padding-right:20px">
 					<figure>
 						<img src="images/valji.png" alt="Free HTML5 Template" class="img-responsive">
 					</figure>
 			</div>
-			<div class="col-md-10 col-sm-6 animate-box">
-				<h2 style="font-family:Arial;font-family:sansation">TEXTILE FIRM IN THE MAKING ...</h2>
+			<div class="col-md-10 col-sm-8 animate-box opacaity-box">
+				<!--<h2 style="font-family:Arial;font-family:sansation">TEXTILE FIRM IN THE MAKING ...</h2>-->
 				<p>100 years back Shri Tekchand Himatmalji Kothari came to Mumbai from a remote village called Bagol in Rajasthan with a dream of realizing his potential in this city. Initially to sustain he worked in various firms in the city which also gave him a wider perspective and a deep understanding about various businesses. In a few years he was joined by his brother Shri Tilokchandji Himatmalji Kothari and both started a Adhat Pedhi in the name of Tilokchand Rajkamal Adat. The business started flourishing and Shri Vastimal Tilokchandji Kothari also joined this family pedi business. 
 				Thus the foundation was firmly laid for other ventures to come.
 				Shri Balchandji Kothari, son of Shri Vastimalji Kothari joined the family adat business. In 1981 he started the textile trading company specializing in uniform fabrics. In early 90’s Shri Balchandji Kothari launched the school uniform fabrics manufacturing unit.
@@ -341,26 +341,26 @@ function showSlides(n) {
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-sm-6 animate-box">
-					<a onclick="openModal();currentSlide(1)" class="item-grid">
-						<div class="image" style="background-image: url(images/image_2.jpg)"></div>
+				<div class="col-md-offset-3 col-md-6 col-sm-6 animate-box">
+					<a onclick="openModal();currentSlide(1)" class="item-grid bordershadow-blue">
+						<div class="image" style="background-image: url(images/Dress_1.jpg)"></div>
 						<div class="v-align">
 							<div class="v-align-middle">
-								<h3 class="title">collections 1</h3>
+								<h3 class="title">School Uniforms</h3>
 							</div>
 						</div>
 					</a>
 				</div>
-				<div class="col-md-6 col-sm-6 animate-box">
+				<!--<div class="col-md-6 col-sm-6 animate-box">
 					<a href="#" class="item-grid">
-						<div class="image" style="background-image: url(images/image_2.jpg)"></div>
+						<div class="image" style="background-image: url(images/corporate.jpg)"></div>
 						<div class="v-align">
 							<div class="v-align-middle">
 								<h3 class="title">collections 2</h3>
 							</div>
 						</div>
 					</a>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</div>
@@ -370,25 +370,115 @@ function showSlides(n) {
   <div class="modal-content">
 
     <div class="mySlides">
-      <div class="numbertext">1 / 4</div>
-      <img src="images/image_2.jpg" style="width:100%">
+      <div class="numbertext">1 / 23</div>
+      <img src="images/HTC LAVA 02.jpg" style="width:100%">
     </div>
 
-    <div class="mySlides">
-      <div class="numbertext">2 / 4</div>
-      <img src="images/image_2.jpg" style="width:100%">
+<div class="mySlides">
+      <div class="numbertext">2 / 23</div>
+      <img src="images/HTC LAVA 03.jpg" style="width:100%">
+    </div>
+	
+<div class="mySlides">
+      <div class="numbertext">3 / 23</div>
+      <img src="images/HTC LAVA 04.jpg" style="width:100%">
+    </div>
+	
+<div class="mySlides">
+      <div class="numbertext">4 / 23</div>
+      <img src="images/HTC LAVA 05.jpg" style="width:100%">
     </div>
 
-    <div class="mySlides">
-      <div class="numbertext">3 / 4</div>
-      <img src="images/a3.jpg" style="width:100%">
+	<div class="mySlides">
+      <div class="numbertext">5 / 23</div>
+      <img src="images/HTC LAVA 06.jpg" style="width:100%">
     </div>
-
-    <div class="mySlides">
-      <div class="numbertext">4 / 4</div>
-      <img src="images/image_2.jpg" style="width:100%">
+	
+	<div class="mySlides">
+      <div class="numbertext">7 / 23</div>
+      <img src="images/HTC LAVA 08.jpg" style="width:100%">
     </div>
-
+	
+	<div class="mySlides">
+      <div class="numbertext">8 / 23</div>
+      <img src="images/HTC LAVA 09.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">9 / 23</div>
+      <img src="images/HTC LAVA 10.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">10 / 23</div>
+      <img src="images/HTC LAVA 011.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">11 / 23</div>
+      <img src="images/HTC LAVA 012.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">12 / 23</div>
+      <img src="images/HTC LAVA 013.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">13 / 23</div>
+      <img src="images/HTC LAVA 014.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">14 / 23</div>
+      <img src="images/HTC LAVA 015.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">15 / 23</div>
+      <img src="images/HTC LAVA 016.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">16 / 23</div>
+      <img src="images/HTC LAVA 017.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">17 / 23</div>
+      <img src="images/HTC LAVA 018.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">18 / 23</div>
+      <img src="images/HTC LAVA 019.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">19 / 23</div>
+      <img src="images/HTC LAVA 020.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">20 / 23</div>
+      <img src="images/HTC LAVA 021.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">21 / 23</div>
+      <img src="images/HTC LAVA 022.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">22 / 23</div>
+      <img src="images/HTC LAVA 023.jpg" style="width:100%">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">23 / 23</div>
+      <img src="images/HTC LAVA 024.jpg" style="width:100%">
+    </div>
+	
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
@@ -511,10 +601,12 @@ function showSlides(n) {
 	<div class="fh5co-contact animate-box">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 col-md-push-2 fh5co-heading animate-box">
+				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading animate-box">
 					<h2>Contact Details</h2>
 					<p><i>"When the trust account is high, communication is easy, instant, and effective."</i></p><br><br>
 				</div>
+			</div>
+			<div class="row">
 				<div class="col-md-3">
 					<h3>Contact Info.</h3>
 					<ul class="contact-info">
@@ -547,6 +639,7 @@ function showSlides(n) {
 							</div>
 						</div>
 					</div>
+				</div>
 				</div>
 			</div>
 		</div>	
