--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@ function showSlides(n) {
 						<li><a href="#stand">Our Stand</a></li>
 						<li><a href="#collections">Collections</a></li>
 						<!--<li><a href="#testimony">Feedback</a></li>!-->
-						<li><a href="#Contact">Contact</a></li>
+						<li><a href="#showcase">Showcase</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 			</div>
