--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ function showSlides2(n) {
   <span class="close cursor" onclick="closeModal3()">&times;</span>
   <div class="modal-content-changed">
 	<div class="mySlides3">
-      <embed src="images/photo/A4 POSTER COLLEGE.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%" height="580px" type='application/pdf'>
+      <embed src="images/Photo/A4 POSTER COLLEGE.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%" height="580px" type='application/pdf'>
     </div>
  </div> 
 </div>
@@ -536,7 +536,7 @@ function showSlides2(n) {
   <span class="close cursor" onclick="closeModal4()">&times;</span>
   <div class="modal-content-changed">
 	<div class="mySlides4">
-      <embed src="images/photo/A4 POSTER CORPORATE.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%" height="580px" type='application/pdf'>
+      <embed src="images/Photo/A4 POSTER CORPORATE.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%" height="580px" type='application/pdf'>
     </div>
  </div> 
 </div>
@@ -545,7 +545,7 @@ function showSlides2(n) {
   <span class="close cursor" onclick="closeModal5()">&times;</span>
   <div class="modal-content-changed">
 	<div class="mySlides5">
-      <embed src="images/photo/A4 POSTER INDUSTRIAL.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%" height="580px" type='application/pdf'>
+      <embed src="images/Photo/A4 POSTER INDUSTRIAL.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%" height="580px" type='application/pdf'>
     </div>
  </div> 
 </div>
@@ -554,7 +554,7 @@ function showSlides2(n) {
   <span class="close cursor" onclick="closeModal6()">&times;</span>
   <div class="modal-content-changed">
 	<div class="mySlides5">
-      <embed src="images/photo/A4 POSTER KIDS.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%" height="580px" type='application/pdf'>
+      <embed src="/images/Photo/A4 POSTER KIDS.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%" height="580px" type='application/pdf'>
     </div>
  </div> 
 </div>
@@ -563,7 +563,7 @@ function showSlides2(n) {
   <span class="close cursor" onclick="closeModal7()">&times;</span>
   <div class="modal-content-changed">
 	<div class="mySlides7">
-      <embed src="images/photo/A4 POSTER SCHOOL.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%" height="580px" type='application/pdf'>
+      <embed src="images/Photo/A4 POSTER SCHOOL.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%" height="580px" type='application/pdf'>
     </div>
  </div> 
 </div>
