--- a/index.html
+++ b/index.html
@@ -773,7 +773,8 @@ function showSlides2(n) {
 					 <div class="col-md-4 animate-box" >
 						<div class="price-box" style="background: rgba(255,245,0,50)">
 							<h3 class="pricing-plan">Displays</h3>
-							<a onclick="openModal1();currentSlide1(1)" class="btn btn-select-plan btn-sm">Vijaywada Display</a><br>
+							<a onclick="openModal1();currentSlide1(1)" class="btn btn-select-plan btn-sm">Vijaywada Display</a>
+							<br>
 							<a onclick="openModal2();currentSlide2(1)" class="btn btn-select-plan btn-sm">Solapur Dispay</a>
 						</div>
 					</div>
@@ -797,17 +798,17 @@ function showSlides2(n) {
 
     <div class="mySlides1">
       <div class="numbertext">1 / 3</div>
-      <img src="images/Vijaywada/DSC_0040.jpg" style="width:100%">
+      <img src="images/DSC_0040.jpg" style="width:100%">
     </div>
 
 	<div class="mySlides1">
       <div class="numbertext">2 / 3</div>
-      <img src="images/Vijaywada/DSC_0097.jpg" style="width:100%">
+      <img src="images/DSC_0097.jpg" style="width:100%">
     </div>
 	
 	<div class="mySlides1">
       <div class="numbertext">3 / 3</div>
-      <img src="images/Vijaywada/DSC_0100.jpg" style="width:100%">
+      <img src="images/DSC_0100.jpg" style="width:100%">
     </div>
 	
     <a class="prev" onclick="plusSlides1(-1)">&#10094;</a>
