from .jpg to .JPG in vijaywada photo

--- a/index.html
+++ b/index.html
@@ -798,17 +798,17 @@ function showSlides2(n) {
 
     <div class="mySlides1">
       <div class="numbertext">1 / 3</div>
-      <img src="images/DSC_0040.jpg" style="width:100%">
+      <img src="images/vijaywada/DSC_0040.JPG" style="width:100%">
     </div>
 
 	<div class="mySlides1">
       <div class="numbertext">2 / 3</div>
-      <img src="images/DSC_0097.jpg" style="width:100%">
+      <img src="images/vijaywada/DSC_0097.JPG" style="width:100%">
     </div>
 	
 	<div class="mySlides1">
       <div class="numbertext">3 / 3</div>
-      <img src="images/DSC_0100.jpg" style="width:100%">
+      <img src="images/vijaywada/DSC_0100.JPG" style="width:100%">
     </div>
 	
     <a class="prev" onclick="plusSlides1(-1)">&#10094;</a>
