--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,8 @@ function showSlides2(n) {
 				<li><a href="#"><i class="icon-facebook"></i></a></li>
 			</div>
 			<div class="col-md-12 fh5co-copyright text-center">
-				<p>&copy; 2017 Darshan Valji. All Rights Reserved. </p>	
+				<p>&copy; 2018 Darshan Valji. All Rights Reserved. </p>	
+				<h3> Designed by Icarus Innovations </h3>
 			</div>
 			
 		</div>
