--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
 
       <div class="fingerprint" style="display: none;">
-        <h1><span class="fingerprint-text" data-text="Lets Unlock Your health">Lets Unlock Your health</span></h1>
+        <h1><span class="fingerprint-text">Lets Enter the world of 3d</span></h1>
         <button class='button' type='button' style="margin-top: 10vh;">
           press to scan fingerprint
           <svg xmlns="http://www.w3.org/2000/svg" id="OBJECTS" viewBox="0 0 103.051 102">
