--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
       </div>
 
-      <div class="fingerprint" style="display: none;">
+      <div class="fingerprint" id="fingerprint" style="display: none;">
         <h1><span class="fingerprint-text">Enter the world of 3d</span></h1>
         <button id="fingerprint" class='button' type='button' style="margin-top: 10vh;">
           <svg xmlns="http://www.w3.org/2000/svg" id="OBJECTS" viewBox="0 0 103.051 102">
@@ -141,7 +141,21 @@
 
 
       <section id="main" style="display: none;">
-        <img src="img/cover.png" style="width: 100%; height: 100%;">
+        <div class="fingerprint">
+          <h1><span class="fingerprint-text">Coming Soon</span></h1>
+          <div class="clock">
+            <div class="hand hours"></div>
+            <div class="hand minutes"></div>
+            <div class="hand seconds"></div>
+            <div class="point"></div>
+            <div class="marker">
+              <span class="marker__1"></span>
+              <span class="marker__2"></span>
+              <span class="marker__3"></span>
+              <span class="marker__4"></span>
+            </div>
+        </div>
+      
       </section>
 
       
