fingerprint class revise

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
       </div>
 
-      <div class="fingerprint" id="fingerprint" style="display: none;">
+      <div class="fingerprint" id="fingerprint-class" style="display: none;">
         <h1><span class="fingerprint-text">Enter the world of 3d</span></h1>
         <button id="fingerprint" class='button' type='button' style="margin-top: 10vh;">
           <svg xmlns="http://www.w3.org/2000/svg" id="OBJECTS" viewBox="0 0 103.051 102">
